--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.show-sql=true
 #for H2
 spring.h2.console.enabled=true
 spring.datasource.generate-unique-name=false
-spring.datasource.url=jdbc:h2:file:/64.books-jpa
+spring.datasource.url=jdbc:h2:file:/daily
